# lan-device-monitor

./: .gitignore  README.md
Client/: requirements.txt
Client/src/: api.py  main.py  main_window.py
Server/: CMakeLists.txt  main.cpp
Server/src/api/: CMakeLists.txt  HttpSrv.cpp  HttpSrv.h  RouteGroup.h
Server/src/api/routing/: DeviceRoutes.cpp  DeviceRoutes.h  ScanRoutes.cpp  ScanRoutes.h
Server/src/domain/: CMakeLists.txt  Device.h  DeviceManager.cpp  DeviceManager.h  NetworkInfo.h
Server/src/scanner/: CMakeLists.txt  NetworkScanner.cpp  NetworkScanner.h
Server/src/services/: CMakeLists.txt  DeviceService.cpp  DeviceService.h
